# my-unimernet

./: .gitignore  README.md  pyproject.toml
unimernet/: __init__.py  model.py  processor.py
unimernet/components/: configuration.py  encoder_decoder.py  processor.py
unimernet/components/decoder/: config.py  decoder.py
unimernet/components/decoder/layers/: attn.py  layer.py
unimernet/components/encoder/: config.py  encoder.py
unimernet/components/encoder/embeddings/: embeddings.py  fge.py  patch_embeddings.py
unimernet/components/encoder/layers/: conv_enhance.py  layer.py  stage.py
unimernet/components/processor/: image_processor.py
unimernet/components/processor/image_utils/: nougat.py  weathers.py
utils/: convert.ipynb  usage.ipynb
