[project]
name = "my-unimernet"
version = "0.1.0"
description = "My UniMERNet impl."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "albumentations>=2.0.0",
    "ftfy>=6.3.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "omegaconf>=2.3.0",
    "opencv-python>=4.10.0.84",
    "pillow>=11.1.0",
    "setuptools>=75.8.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "transformers>=4.48.0",
    "wand>=0.6.13",
]
